[package]
name = "pdf2pwg"
version = "0.2.0"
authors = ["martin.kolarik@smartcontrol.cz"]
description = "Single purpose A4 page renderer rendering PDF using pdfium to PWG/URF."
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/martin-kolarik/pdf2pwg"
homepage = "https://github.com/martin-kolarik/pdf2pwg"

[dependencies]
async-std = { version = "^1", features = ["attributes", "unstable"] }
bytes = { version = "^1.5" }
pdfium-render = { version = "^0.8" }
thiserror = { version = "^1.0" }
